--- a/src/app/drag-drop/drag-drop.component.html
+++ b/src/app/drag-drop/drag-drop.component.html
@@ -5,7 +5,7 @@
   
   <div class="example-container">
     
-    <h2 class="title">To do <button mat-icon-button (click)="openDialog()" class="icon-button"><mat-icon>add</mat-icon></button></h2>
+    <h2 class="title">To do <button mat-icon-button (click)="toggleSorting()" class="icon-button"><mat-icon>sort</mat-icon> </button><button mat-icon-button (click)="openDialog()" class="icon-button"><mat-icon>add</mat-icon></button></h2>
     <div
       cdkDropList
       #todoList="cdkDropList"
@@ -14,9 +14,16 @@
       class="example-list"
       (cdkDropListDropped)="drop($event)"
     >
-      <div class="example-box" *ngFor="let item of todo" cdkDrag>{{ item }} <button mat-icon-button (click)="deleteItemsToDo(item)" class="icon-button"><mat-icon>close</mat-icon></button></div>
+    <div class="example-box" *ngFor="let item of todo" cdkDrag>
+      <div>
+        {{ item.text }}
+        <div class="created-time">{{ item.createdTime }} </div>
+        <div class="created-time" [ngStyle]="{ 'color': priorityColor(item.prior) }">Приоритет: {{ priorityText(item.prior) }}</div>
+      </div>
+      <button mat-icon-button (click)="deleteItemsToDo(item)" class="icon-button"><mat-icon>close</mat-icon></button>
+    </div>        
+      </div>
     </div>
-  </div>
 
   <div class="example-container2">
  
@@ -29,7 +36,13 @@
       class="example-list"
       (cdkDropListDropped)="drop($event)"
     >
-      <div class="example-box" *ngFor="let item of done" cdkDrag>{{ item }} <button mat-icon-button (click)="deleteItemsDone(item)" class="icon-button"><mat-icon>close</mat-icon></button></div>
+    <div class="example-box" *ngFor="let item of done" cdkDrag>
+      <div>
+        {{ item.text }}
+        <div class="created-time">{{ item.createdTime }}</div>
+        <div class="created-time" [ngStyle]="{ 'color': priorityColor(item.prior) }">Приоритет: {{ priorityText(item.prior) }}</div>
+      </div>
+      <button mat-icon-button (click)="deleteItemsDone(item)" class="icon-button"><mat-icon>close</mat-icon></button>
+    </div>        
+      </div>
     </div>
-  </div>
-</div>
