--- a/src/app/add-item-dialog/add-item-dialog.component.css
+++ b/src/app/add-item-dialog/add-item-dialog.component.css
@@ -4,10 +4,10 @@
   }
   
   .cancel-button {
-    margin-right: 10px; /* Интервал между кнопками от правого края */
+    margin-right: 10px; 
   }
   
   .add-button {
-    margin-left: 10px; /* Интервал между кнопками от левого края */
+    margin-left: 10px; 
   }
   
