--- a/src/app/add-item-dialog/add-item-dialog.component.html
+++ b/src/app/add-item-dialog/add-item-dialog.component.html
@@ -5,6 +5,9 @@
     <input matInput [(ngModel)]="newItem">
   </mat-form-field>
   <mat-form-field>
+    <textarea matInput placeholder="Description" [(ngModel)]="description" rows="5"></textarea>
+  </mat-form-field>
+  <mat-form-field>
     <mat-label>Приоритет</mat-label>
   <mat-select [(value)]="priority">
     <mat-option value="0">Нет</mat-option>
@@ -17,5 +20,5 @@
 <mat-dialog-actions class="button-container">
   <button mat-button (click)="onCancelClick()" class="cancel-button">Отмена</button>
   <span class="spacer"></span>
-  <button mat-button [mat-dialog-close]="{newItem: newItem, priority: priority}" cdkFocusInitial class="add-button">Добавить</button>
+  <button mat-button [mat-dialog-close]="{newItem: newItem, priority: priority,description:description}" cdkFocusInitial class="add-button">Добавить</button>
 </mat-dialog-actions>
