--- a/src/app/drag-drop/drag-drop.component.html
+++ b/src/app/drag-drop/drag-drop.component.html
@@ -2,10 +2,15 @@
   <div class="date-time">{{ getCurrentDateTime() }}</div>
 </div>
 <div class="container">
-  
   <div class="example-container">
-    
-    <h2 class="title">To do <button mat-icon-button (click)="toggleSorting()" class="icon-button"><mat-icon>sort</mat-icon> </button><button mat-icon-button (click)="openDialog()" class="icon-button"><mat-icon>add</mat-icon></button></h2>
+    <h2 class="title">To Do
+      <button mat-icon-button (click)="toggleSorting()" class="icon-button">
+        <mat-icon>sort</mat-icon>
+      </button>
+      <button mat-icon-button (click)="openDialog()" class="icon-button">
+        <mat-icon>add</mat-icon>
+      </button>
+    </h2>
     <div
       cdkDropList
       #todoList="cdkDropList"
@@ -14,19 +19,28 @@
       class="example-list"
       (cdkDropListDropped)="drop($event)"
     >
-    <div class="example-box" *ngFor="let item of todo" cdkDrag>
-      <div>
-        {{ item.text }}
-        <div class="created-time">{{ item.createdTime }} </div>
-        <div class="created-time" [ngStyle]="{ 'color': priorityColor(item.prior) }">Приоритет: {{ priorityText(item.prior) }}</div>
-      </div>
-      <button mat-icon-button (click)="deleteItemsToDo(item)" class="icon-button"><mat-icon>close</mat-icon></button>
-    </div>        
+      <div class="example-box" *ngFor="let item of todo" cdkDrag>
+        <div class="task-content">
+          <div class="task-title">{{ item.text }}</div>
+          <div class="task-description">{{ item.description }}</div>
+          <div class="created-time">Created: {{ item.createdTime }}</div>
+          <div class="task-priority" [ngStyle]="{ 'color': priorityColor(item.prior) }">
+            Priority: {{ priorityText(item.prior) }}
+          </div>
+        </div>
+        <div class="task-buttons">
+          <button mat-icon-button class="icon-button" (click)="openEditDialog(item)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="deleteItemsToDo(item)" class="icon-button">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
       </div>
     </div>
+  </div>
 
   <div class="example-container2">
- 
     <h2>Done</h2>
     <div
       cdkDropList
@@ -36,13 +50,26 @@
       class="example-list"
       (cdkDropListDropped)="drop($event)"
     >
-    <div class="example-box" *ngFor="let item of done" cdkDrag>
-      <div>
-        {{ item.text }}
-        <div class="created-time">{{ item.createdTime }}</div>
-        <div class="created-time" [ngStyle]="{ 'color': priorityColor(item.prior) }">Приоритет: {{ priorityText(item.prior) }}</div>
-      </div>
-      <button mat-icon-button (click)="deleteItemsDone(item)" class="icon-button"><mat-icon>close</mat-icon></button>
-    </div>        
+      <div class="example-box" *ngFor="let item of done" cdkDrag>
+        <div class="task-content">
+          <div class="task-title">
+            <div class="break-word">{{ item.text }}</div>
+          </div>
+          <div class="task-description">{{ item.description }}</div>
+          <div class="created-time">Created: {{ item.createdTime }}</div>
+          <div class="task-priority" [ngStyle]="{ 'color': priorityColor(item.prior) }">
+            Priority: {{ priorityText(item.prior) }}
+          </div>
+        </div>
+        <div class="task-buttons">
+          <button mat-icon-button class="icon-button" (click)="openEditDialog(item)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="deleteItemsDone(item)" class="icon-button">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
       </div>
     </div>
+  </div>
+</div>
