--- a/src/app/edit-item-dialog/edit-item-dialog.component.html
+++ b/src/app/edit-item-dialog/edit-item-dialog.component.html
@@ -7,12 +7,12 @@
     <textarea matInput placeholder="Description" [(ngModel)]="description" rows="5"></textarea>
   </mat-form-field>
   <mat-form-field>
-    <mat-label>Приоритет</mat-label>
+    <mat-label>Priority</mat-label>
     <mat-select [(value)]="priority">
-      <mat-option value="0">Нет</mat-option>
-      <mat-option value="1">Низкий</mat-option>
-      <mat-option value="2">Средний</mat-option>
-      <mat-option value="3">Высокий</mat-option>
+      <mat-option value="0">None</mat-option>
+      <mat-option value="1">Low</mat-option>
+      <mat-option value="2">Mid</mat-option>
+      <mat-option value="3">High</mat-option>
     </mat-select>
   </mat-form-field>
 </mat-dialog-content>
