--- a/src/app/add-item-dialog/add-item-dialog.component.html
+++ b/src/app/add-item-dialog/add-item-dialog.component.html
@@ -1,24 +1,24 @@
-<h2 mat-dialog-title>Добавить задачу</h2>
+<h2 mat-dialog-title>Add task</h2>
 <mat-dialog-content>
   <mat-form-field>
-    <mat-label>Добавить элемент</mat-label>
+    <mat-label>Add element</mat-label>
     <input matInput [(ngModel)]="newItem">
   </mat-form-field>
   <mat-form-field>
     <textarea matInput placeholder="Description" [(ngModel)]="description" rows="5"></textarea>
   </mat-form-field>
   <mat-form-field>
-    <mat-label>Приоритет</mat-label>
+    <mat-label>Priority</mat-label>
   <mat-select [(value)]="priority">
-    <mat-option value="0">Нет</mat-option>
-    <mat-option value="1">Низкий</mat-option>
-    <mat-option value="2">Средний</mat-option>
-    <mat-option value="3">Высокий</mat-option>
+    <mat-option value="0">None</mat-option>
+    <mat-option value="1">Low</mat-option>
+    <mat-option value="2">Mid</mat-option>
+    <mat-option value="3">High</mat-option>
   </mat-select>
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions class="button-container">
-  <button mat-button (click)="onCancelClick()" class="cancel-button">Отмена</button>
+  <button mat-button (click)="onCancelClick()" class="cancel-button">Cancel</button>
   <span class="spacer"></span>
-  <button mat-button [mat-dialog-close]="{newItem: newItem, priority: priority,description:description}" cdkFocusInitial class="add-button">Добавить</button>
+  <button mat-button [mat-dialog-close]="{newItem: newItem, priority: priority,description:description}" cdkFocusInitial class="add-button">Add</button>
 </mat-dialog-actions>
